--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "src/styles.scss"
                         ],
                         "scripts": []
@@ -77,7 +77,7 @@
                         "scripts": [],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "src/styles.scss"
                         ],
                         "assets": [
@@ -145,7 +145,7 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "src/styles.scss"
                         ],
                         "scripts": []
@@ -195,7 +195,7 @@
                         "scripts": [],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "src/styles.scss"
                         ],
                         "assets": [
@@ -263,7 +263,7 @@
                             "node_modules/bootstrap/scss/bootstrap-reboot.scss",
                             "node_modules/docsearch.js/dist/cdn/docsearch.min.css",
                             "node_modules/highlight.js/styles/dracula.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "docs/app/@theme/styles/styles.scss"
                         ],
                         "scripts": [
@@ -316,7 +316,7 @@
                         "styles": [
                             "node_modules/bootstrap/scss/bootstrap-reboot.scss",
                             "node_modules/highlight.js/styles/dracula.css",
-                            "node_modules/ngx-app-frame-icons/scss/ngx-app-frame-icons.scss",
+                            "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
                             "docs/app/@theme/styles/styles.scss"
                         ],
                         "assets": [
