--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,9 @@
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.css",
                             "node_modules/@ngx-app-frame/icons/scss/oliveui-icons.scss",
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/primeng/resources/themes/omega/theme.css",
+                            "node_modules/primeng/resources/primeng.min.css",
                             "src/styles.scss"
                         ],
                         "scripts": []
