--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-app-frame",
-    "version": "1.0.7",
+    "version": "1.0.10",
     "license": "MIT",
     "author": "金飞 <28206254@qq.com>",
     "browserslist": [
@@ -86,16 +86,17 @@
         "@angular/platform-browser": "6.0.0",
         "@angular/platform-browser-dynamic": "6.0.0",
         "@angular/router": "6.0.0",
-        "@ngx-app-frame/auth": "^1.0.2",
-        "@ngx-app-frame/domain": "^1.0.7",
+        "@ngx-app-frame/auth": "^1.0.10",
+        "@ngx-app-frame/domain": "^1.0.10",
         "@ngx-app-frame/icons": "^1.0.3",
-        "@ngx-app-frame/security": "^1.0.2",
-        "@ngx-app-frame/theme": "^1.0.2",
-        "@ngx-app-frame/utils": "^1.0.6",
+        "@ngx-app-frame/security": "^1.0.10",
+        "@ngx-app-frame/theme": "^1.0.10",
+        "@ngx-app-frame/utils": "^1.0.10",
         "bootstrap": "4.0.0",
         "colors.js": "1.2.4",
         "core-js": "2.5.1",
         "docsearch.js": "^2.5.2",
+        "font-awesome": "^4.7.0",
         "gulp-bump": "2.7.0",
         "highlight.js": "9.12.0",
         "ionicons": "2.0.1",
